--- a/MyCar/app/src/main/res/values/colors.xml
+++ b/MyCar/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="_bg__signinactivity_ek2_color">#B1B1B1</color>
+    <color name="sign_up_color">#000000</color>
+    <color name="sign_in_color">#FFFFFF</color>
+    <color name="password_color">#595959</color>
 </resources>
