--- a/MyCar/app/src/main/res/layout/activity_sign_in.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_in.xml
@@ -12,7 +12,7 @@
         android:id="@+id/sign_into_your_account"
         android:layout_width="205dp"
         android:layout_height="45dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="56dp"
         android:text="@string/sign_into_your_account_string"
         android:textColor="@color/sign_up_color"
         android:textSize="20sp"
@@ -27,7 +27,7 @@
         android:layout_height="55dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="192dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="52dp"
         android:background="@drawable/email_box"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,8 +37,8 @@
         android:id="@+id/email_address"
         android:layout_width="201dp"
         android:layout_height="48dp"
-        android:layout_marginTop="196dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="72dp"
         android:background="@null"
         android:hint="@string/email_address_string"
         android:textColor="@color/password_color"
@@ -52,7 +52,7 @@
         android:layout_height="55dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="252dp"
+        android:layout_marginTop="192dp"
         android:layout_marginEnd="52dp"
         android:background="@drawable/email_box"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,8 +62,8 @@
         android:id="@+id/password"
         android:layout_width="201dp"
         android:layout_height="48dp"
-        android:layout_marginTop="256dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginTop="196dp"
+        android:layout_marginEnd="72dp"
         android:background="@null"
         android:hint="@string/password_string"
         android:textColor="@color/password_color"
@@ -75,8 +75,8 @@
         android:id="@+id/email_vector"
         android:layout_width="32dp"
         android:layout_height="25dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="204dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="144dp"
         android:contentDescription="email_vector"
         android:src="@drawable/email_vector"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
         android:layout_width="36dp"
         android:layout_height="29dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="268dp"
+        android:layout_marginTop="208dp"
         android:contentDescription="email_vector"
         android:src="@drawable/password_vector2"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,11 +97,10 @@
         android:id="@+id/sign_in_button"
         android:layout_width="243dp"
         android:layout_height="35dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="36dp"
         android:contentDescription="sign_in_button"
         android:src="@drawable/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_box" />
 
@@ -122,38 +121,69 @@
         android:id="@+id/line2"
         android:layout_width="125dp"
         android:layout_height="1dp"
-        android:layout_marginTop="504dp"
+        android:layout_marginTop="400dp"
         android:background="@drawable/line2_shape"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.111"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/or_sign_in_with"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/or_sign_in_with"
-        android:layout_width="108dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="332dp"
-        android:text="@string/or_sign_in_with_string"
-        android:textColor="@color/sign_up_color"
+        android:layout_width="101dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="68dp"
+        android:text="Or sign in with"
+        android:textColor="#000000"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
-        app:layout_constraintVertical_bias="0.897" />
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
 
     <View
         android:id="@+id/line1"
         android:layout_width="125dp"
         android:layout_height="1dp"
-        android:layout_marginTop="504dp"
+        android:layout_marginTop="400dp"
         android:background="@drawable/line1_shape"
         app:layout_constraintEnd_toStartOf="@+id/or_sign_in_with"
-        app:layout_constraintHorizontal_bias="0.235"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/twitter"
+        android:layout_width="48dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="24dp"
+        android:contentDescription="twitter"
+        android:src="@drawable/twitter"
+        app:layout_constraintStart_toEndOf="@+id/google"
+        app:layout_constraintTop_toBottomOf="@+id/or_sign_in_with" />
+
+    <ImageView
+        android:id="@+id/facebook"
+        android:layout_width="42dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:contentDescription="facebook"
+        android:src="@drawable/facebook"
+        app:layout_constraintStart_toEndOf="@+id/twitter"
+        app:layout_constraintTop_toBottomOf="@+id/or_sign_in_with" />
+
+    <ImageView
+        android:id="@+id/google"
+        android:layout_width="42dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="24dp"
+        android:contentDescription="google"
+        android:src="@drawable/google"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/or_sign_in_with" />
 
     <ImageView
         android:id="@+id/gradient"
