--- a/MyCar/app/src/main/res/values/colors.xml
+++ b/MyCar/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name = "dark_gray">#1A1A1A</color>
+
+
     <color name="_bg__signinactivity_ek2_color">#B1B1B1</color>
     <color name="sign_up_color">#000000</color>
     <color name="sign_in_color">#FFFFFF</color>
