--- a/MyCar/app/src/main/res/layout/activity_sign_in.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/_bg__signinactivity_ek2_shape"
+    android:background="@drawable/background"
     tools:context=".SignUpActivity">
 
 
