--- a/MyCar/app/src/main/res/values/colors.xml
+++ b/MyCar/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name = "dark_gray">#1A1A1A</color>
 
 
-    <color name="_bg__signinactivity_ek2_color">#B1B1B1</color>
+    <color name="background">#B1B1B1</color>
     <color name="sign_up_color">#000000</color>
     <color name="sign_in_color">#FFFFFF</color>
     <color name="password_color">#595959</color>
