Modified and deleted unused files

--- a/MyCar/app/src/main/res/layout/activity_sign_in.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_in.xml
@@ -13,8 +13,8 @@
         android:layout_width="205dp"
         android:layout_height="45dp"
         android:layout_marginTop="56dp"
-        android:text="@string/sign_into_your_account_string"
-        android:textColor="@color/sign_up_color"
+        android:text="Sign into your account"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,8 +40,7 @@
         android:layout_marginTop="132dp"
         android:layout_marginEnd="72dp"
         android:background="@null"
-        android:hint="@string/email_address_string"
-        android:textColor="@color/password_color"
+        android:hint="Email Address"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -65,8 +64,7 @@
         android:layout_marginTop="196dp"
         android:layout_marginEnd="72dp"
         android:background="@null"
-        android:hint="@string/password_string"
-        android:textColor="@color/password_color"
+        android:hint="Password"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -94,6 +92,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/password_vector1"
+        android:layout_width="9dp"
+        android:layout_height="13dp"
+        android:contentDescription="password_vector1"
+        android:src="@drawable/password_vector1"
+        app:layout_constraintBottom_toBottomOf="@+id/password_vector"
+        app:layout_constraintEnd_toEndOf="@+id/password_vector"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="@+id/password_vector"
+        app:layout_constraintTop_toTopOf="@+id/password_vector"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
         android:id="@+id/sign_in_button"
         android:layout_width="243dp"
         android:layout_height="35dp"
@@ -109,8 +120,8 @@
         android:layout_width="70dp"
         android:layout_height="29dp"
         android:layout_marginTop="4dp"
-        android:text="@string/sign_in_string"
-        android:textColor="@color/sign_in_color"
+        android:text="Sign in"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
         app:layout_constraintHorizontal_bias="0.549"
@@ -122,7 +133,7 @@
         android:layout_width="125dp"
         android:layout_height="1dp"
         android:layout_marginTop="400dp"
-        android:background="@drawable/line2_shape"
+        android:background="@drawable/line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/or_sign_in_with"
@@ -146,7 +157,7 @@
         android:layout_width="125dp"
         android:layout_height="1dp"
         android:layout_marginTop="400dp"
-        android:background="@drawable/line1_shape"
+        android:background="@drawable/line"
         app:layout_constraintEnd_toStartOf="@+id/or_sign_in_with"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
@@ -189,8 +200,8 @@
         android:id="@+id/sign_up"
         android:layout_width="69dp"
         android:layout_height="29dp"
-        android:text="@string/sign_up_string"
-        android:textColor="@color/sign_up_color"
+        android:text="Sign up"
+        android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -201,8 +212,8 @@
         android:layout_width="174dp"
         android:layout_height="21dp"
         android:layout_marginTop="28dp"
-        android:text="@string/don_t_have_an_account__string"
-        android:textColor="@color/sign_up_color"
+        android:text="Don't have an account?"
+        android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
