--- a/MyCar/app/src/main/res/drawable/line.xml
+++ b/MyCar/app/src/main/res/drawable/line.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- line2 from your XD file. -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle" >
-	<solid android:color="@color/sign_up_color" />
+	<solid android:color="@color/black" />
 </shape>
 
