--- a/MyCar/app/src/main/res/layout/activity_sign_in.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_in.xml
@@ -29,7 +29,7 @@
         android:layout_centerVertical="true"
         android:layout_marginTop="128dp"
         android:layout_marginEnd="52dp"
-        android:background="@drawable/email_box"
+        android:background="@drawable/box"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,11 +51,11 @@
         android:layout_height="55dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="192dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="52dp"
-        android:background="@drawable/email_box"
+        android:background="@drawable/box"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/email_box" />
 
     <EditText
         android:id="@+id/password"
