--- a/MyCar/app/src/main/res/layout/activity_sign_up.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_up.xml
@@ -4,6 +4,148 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".SignUpActivity">
+
+    <View
+        android:id="@+id/country_box4"
+        android:layout_width="280dp"
+        android:layout_height="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/country_box3" />
+
+    <View
+        android:id="@+id/country_box3"
+        android:layout_width="280dp"
+        android:layout_height="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/country_box2" />
+
+    <View
+        android:id="@+id/country_box2"
+        android:layout_width="280dp"
+        android:layout_height="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/country_box" />
+
+    <ImageView
+        android:id="@+id/email_box"
+        android:layout_width="138dp"
+        android:layout_height="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.219"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/person_vector"
+        android:layout_width="25dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="136dp"
+        android:contentDescription="person_vector"
+        android:src="@drawable/person_vector"
+        app:layout_constraintEnd_toStartOf="@+id/first_name"
+        app:layout_constraintHorizontal_bias="0.875"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/first_name"
+        android:layout_width="97dp"
+        android:layout_height="48dp"
+        android:background="null"
+        android:hint="First Name"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/email_box"
+        app:layout_constraintEnd_toEndOf="@+id/email_box"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/email_box"
+        app:layout_constraintTop_toTopOf="@+id/email_box"
+        app:layout_constraintVertical_bias="0.285" />
+
+    <ImageView
+        android:id="@+id/last_name_box"
+        android:layout_width="138dp"
+        android:layout_height="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/box"
+        app:layout_constraintStart_toEndOf="@+id/email_box"
+        app:layout_constraintTop_toBottomOf="@+id/create_an_account" />
+
+    <EditText
+        android:id="@+id/last_name"
+        android:layout_width="97dp"
+        android:layout_height="48dp"
+        android:background="null"
+        android:hint="Last Name"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/last_name_box"
+        app:layout_constraintEnd_toEndOf="@+id/last_name_box"
+        app:layout_constraintHorizontal_bias="0.682"
+        app:layout_constraintStart_toStartOf="@+id/last_name_box"
+        app:layout_constraintTop_toTopOf="@+id/last_name_box"
+        app:layout_constraintVertical_bias="0.571" />
+
+    <TextView
+        android:id="@+id/create_an_account"
+        android:layout_width="172dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="52dp"
+        android:text="Create an account"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/country_box"
+        android:layout_width="280dp"
+        android:layout_height="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/last_name_box" />
+
+    <ImageView
+        android:id="@+id/gradient"
+        android:layout_width="wrap_content"
+        android:layout_height="129dp"
+        android:contentDescription="gradient"
+        android:src="@drawable/gradient"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
