Designed email box

--- a/MyCar/app/src/main/res/layout/activity_sign_up.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_up.xml
@@ -163,6 +163,31 @@
         app:layout_constraintStart_toStartOf="@+id/country_box"
         app:layout_constraintTop_toBottomOf="@+id/person_vector" />
 
+    <EditText
+        android:id="@+id/email_address"
+        android:layout_width="230dp"
+        android:layout_height="53dp"
+        android:background="@null"
+        android:hint="Email Address"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/country_box2"
+        app:layout_constraintEnd_toEndOf="@+id/country_box2"
+        app:layout_constraintHorizontal_bias="0.835"
+        app:layout_constraintStart_toStartOf="@+id/country_box2"
+        app:layout_constraintTop_toTopOf="@+id/country_box2"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/email_vector"
+        android:layout_width="28dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="40dp"
+        android:contentDescription="email_vector"
+        android:src="@drawable/email_vector"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/world_vector" />
+
     <ImageView
         android:id="@+id/gradient"
         android:layout_width="wrap_content"
