--- a/MyCar/app/src/main/res/layout/activity_sign_up.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_up.xml
@@ -189,6 +189,42 @@
         app:layout_constraintTop_toBottomOf="@+id/world_vector" />
 
     <ImageView
+        android:id="@+id/password_vector2"
+        android:layout_width="22dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="44dp"
+        android:contentDescription="password_vector2"
+        android:src="@drawable/password_vector2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_vector" />
+
+    <ImageView
+        android:id="@+id/password_vector1"
+        android:layout_width="5dp"
+        android:layout_height="5dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:contentDescription="password_vector1"
+        android:src="@drawable/password_vector1"
+        app:layout_constraintBottom_toBottomOf="@+id/password_vector2"
+        app:layout_constraintEnd_toEndOf="@+id/password_vector2" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="228dp"
+        android:layout_height="51dp"
+        android:background="@null"
+        android:hint="Password"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/country_box3"
+        app:layout_constraintEnd_toEndOf="@+id/country_box3"
+        app:layout_constraintHorizontal_bias="0.816"
+        app:layout_constraintStart_toStartOf="@+id/country_box3"
+        app:layout_constraintTop_toTopOf="@+id/country_box3"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
         android:id="@+id/gradient"
         android:layout_width="wrap_content"
         android:layout_height="129dp"
@@ -197,5 +233,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
