--- a/MyCar/app/src/main/res/layout/activity_sign_up.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_up.xml
@@ -224,6 +224,32 @@
         app:layout_constraintTop_toTopOf="@+id/country_box3"
         app:layout_constraintVertical_bias="1.0" />
 
+
+    <ImageView
+        android:id="@+id/check_vector"
+        android:layout_width="22dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="40dp"
+        android:contentDescription="check_vector"
+        android:src="@drawable/check_vector"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password_vector2" />
+
+    <EditText
+        android:id="@+id/confirm_your_password"
+        android:layout_width="228dp"
+        android:layout_height="53dp"
+        android:background="null"
+        android:hint="Confirm your password"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/country_box4"
+        app:layout_constraintEnd_toEndOf="@+id/country_box4"
+        app:layout_constraintHorizontal_bias="0.826"
+        app:layout_constraintStart_toStartOf="@+id/country_box4"
+        app:layout_constraintTop_toTopOf="@+id/country_box4"
+        app:layout_constraintVertical_bias="0.0" />
+
     <ImageView
         android:id="@+id/gradient"
         android:layout_width="wrap_content"
