--- a/MyCar/app/src/main/res/layout/activity_sign_in.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".SignUpActivity">
+    tools:context=".SignInActivity">
 
 
     <TextView
@@ -107,8 +107,9 @@
     <ImageView
         android:id="@+id/sign_in_button"
         android:layout_width="243dp"
-        android:layout_height="35dp"
+        android:layout_height="48dp"
         android:layout_marginTop="36dp"
+        android:clickable="false"
         android:contentDescription="sign_in_button"
         android:src="@drawable/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,10 +120,10 @@
         android:id="@+id/sign_in"
         android:layout_width="70dp"
         android:layout_height="29dp"
-        android:layout_marginTop="4dp"
         android:text="Sign in"
         android:textColor="@color/white"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
         app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="@+id/sign_in_button"
@@ -199,7 +200,9 @@
     <TextView
         android:id="@+id/sign_up"
         android:layout_width="69dp"
-        android:layout_height="29dp"
+        android:layout_height="48dp"
+        android:clickable="true"
+        android:onClick="goToSignUp"
         android:text="Sign up"
         android:textColor="@color/black"
         android:textSize="14sp"
