--- a/MyCar/app/src/main/res/layout/activity_sign_up.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".SignUpActivity">
+    tools:context=".SignInActivity">
 
     <View
         android:id="@+id/country_box4"
@@ -75,8 +75,8 @@
         android:id="@+id/first_name"
         android:layout_width="97dp"
         android:layout_height="48dp"
-        android:background="null"
         android:hint="First Name"
+        android:background="@null"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/email_box"
         app:layout_constraintEnd_toEndOf="@+id/email_box"
@@ -101,8 +101,8 @@
         android:id="@+id/last_name"
         android:layout_width="97dp"
         android:layout_height="48dp"
-        android:background="null"
         android:hint="Last Name"
+        android:background="@null"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/last_name_box"
         app:layout_constraintEnd_toEndOf="@+id/last_name_box"
@@ -142,8 +142,8 @@
         android:id="@+id/country"
         android:layout_width="231dp"
         android:layout_height="54dp"
-        android:background="null"
         android:hint="Country"
+        android:background="@null"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/country_box"
         app:layout_constraintEnd_toEndOf="@+id/country_box"
@@ -240,7 +240,7 @@
         android:id="@+id/confirm_your_password"
         android:layout_width="228dp"
         android:layout_height="53dp"
-        android:background="null"
+        android:background="@null"
         android:hint="Confirm your password"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/country_box4"
@@ -249,6 +249,31 @@
         app:layout_constraintStart_toStartOf="@+id/country_box4"
         app:layout_constraintTop_toTopOf="@+id/country_box4"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/sign_up_button"
+        android:layout_width="243dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="36dp"
+        android:contentDescription="sign_up_button"
+        android:src="@drawable/sign_in_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/country_box4" />
+
+    <TextView
+        android:id="@+id/sign_up"
+        android:layout_width="76dp"
+        android:layout_height="29dp"
+        android:text="Sign up"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/sign_up_button"
+        app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
+        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintStart_toStartOf="@+id/sign_up_button"
+        app:layout_constraintTop_toTopOf="@+id/sign_up_button"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/gradient"
