--- a/MyCar/app/src/main/res/layout/activity_more_info.xml
+++ b/MyCar/app/src/main/res/layout/activity_more_info.xml
@@ -11,19 +11,19 @@
         android:id="@+id/__img___breaks_group"
         android:layout_width="247dp"
         android:layout_height="143dp"
-        android:layout_marginTop="456dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="__img___breaks_group"
         android:src="@drawable/__img___breaks_group"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/__img___transmission_group" />
 
     <ImageView
         android:id="@+id/__img___power_steering_group"
         android:layout_width="167dp"
         android:layout_height="200dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="25dp"
         android:contentDescription="__img___power_steering_group"
         android:src="@drawable/__img___power_steering_group"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/__img___transmission_group"
         android:layout_width="167dp"
         android:layout_height="200dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="8dp"
         android:contentDescription="__img___transmission_group"
         android:src="@drawable/__img___transmission_group"
@@ -45,7 +45,7 @@
         android:layout_width="167dp"
         android:layout_height="200dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="25dp"
         android:contentDescription="__img___engine_coolant_group"
         android:src="@drawable/__img___engine_coolant_group"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:id="@+id/__img___engine_oil"
         android:layout_width="167dp"
         android:layout_height="200dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="36dp"
         android:contentDescription="__img___engine_oil"
         android:src="@drawable/__img___engine_oil"
