--- a/MyCar/app/src/main/res/layout/activity_sign_in.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_in.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/sign_into_your_account" />
 
     <EditText
-        android:id="@+id/email_address"
+        android:id="@+id/email_address1"
         android:layout_width="201dp"
         android:layout_height="48dp"
         android:layout_marginTop="132dp"
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/email_box" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/password1"
         android:layout_width="201dp"
         android:layout_height="48dp"
         android:layout_marginTop="196dp"
@@ -109,8 +109,8 @@
         android:layout_width="243dp"
         android:layout_height="48dp"
         android:layout_marginTop="36dp"
-        android:clickable="false"
         android:contentDescription="sign_in_button"
+        android:onClick="signIn"
         android:src="@drawable/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
