--- a/MyCar/app/src/main/res/layout/activity_add_car.xml
+++ b/MyCar/app/src/main/res/layout/activity_add_car.xml
@@ -128,7 +128,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/password1"
+        android:id="@+id/password"
         android:layout_width="228dp"
         android:layout_height="51dp"
         android:background="@null"
