--- a/MyCar/app/src/main/res/layout/activity_sign_up.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_up.xml
@@ -211,7 +211,7 @@
         app:layout_constraintEnd_toEndOf="@+id/password_vector2" />
 
     <EditText
-        android:id="@+id/password1"
+        android:id="@+id/password"
         android:layout_width="228dp"
         android:layout_height="51dp"
         android:background="@null"
