--- a/MyCar/app/src/main/res/layout/custom_list_view.xml
+++ b/MyCar/app/src/main/res/layout/custom_list_view.xml
@@ -3,7 +3,8 @@
 
     android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <ImageView
         android:id="@+id/image"
@@ -26,12 +27,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/vehicleBrand"
-        android:layout_marginLeft="14dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="59dp"
         android:layout_marginTop="0dp"
+        android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@id/image"
         android:maxLength="27"
         android:singleLine="true"
         android:text="Model" />
+
+    <TextView
+        android:id="@+id/textView"
+        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/vehicleBrand"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="0dp"
+        android:layout_toEndOf="@+id/image"
+        android:text="Plate:" />
 
 
 </RelativeLayout>
