--- a/MyCar/app/src/main/res/layout/activity_user_cars.xml
+++ b/MyCar/app/src/main/res/layout/activity_user_cars.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CarsActivity">
+    tools:context=".UserCarsActivity">
 
     <ListView
         android:id="@+id/listView"
