--- a/MyCar/app/src/main/res/layout/activity_user_cars.xml
+++ b/MyCar/app/src/main/res/layout/activity_user_cars.xml
@@ -9,11 +9,26 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="404dp"
-        android:layout_height="693dp"
+        android:layout_width="396dp"
+        android:layout_height="623dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.152" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="28dp"
+        android:backgroundTint="#B1B1B1"
+        android:clickable="true"
+        android:contentDescription="add"
+        app:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/add_ic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
