--- a/MyCar/app/src/main/res/layout/activity_user_cars.xml
+++ b/MyCar/app/src/main/res/layout/activity_user_cars.xml
@@ -27,6 +27,7 @@
         android:backgroundTint="#B1B1B1"
         android:clickable="true"
         android:contentDescription="add"
+        android:onClick="goToAddCar"
         app:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
