--- a/MyCar/app/src/main/res/layout/activity_add_car.xml
+++ b/MyCar/app/src/main/res/layout/activity_add_car.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".SignInActivity">
+    tools:context=".AddCarActivity">
 
     <View
         android:id="@+id/country_box7"
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/country"
+        android:id="@+id/et_model"
         android:layout_width="231dp"
         android:layout_height="54dp"
         android:background="@null"
@@ -87,7 +87,7 @@
         app:layout_constraintStart_toStartOf="@+id/country_box6" />
 
     <EditText
-        android:id="@+id/brand"
+        android:id="@+id/et_brand"
         android:layout_width="231dp"
         android:layout_height="54dp"
         android:background="@null"
@@ -101,7 +101,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/email_address1"
+        android:id="@+id/et_color"
         android:layout_width="230dp"
         android:layout_height="53dp"
         android:background="@null"
@@ -115,7 +115,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/et_plate"
         android:layout_width="228dp"
         android:layout_height="51dp"
         android:background="@null"
@@ -176,9 +176,11 @@
     <ImageView
         android:id="@+id/sign_up_button"
         android:layout_width="243dp"
-        android:layout_height="35dp"
+        android:layout_height="48dp"
         android:layout_marginTop="88dp"
+        android:clickable="true"
         android:contentDescription="sign_up_button"
+        android:onClick="addCar"
         android:src="@drawable/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -196,7 +198,7 @@
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="@+id/sign_up_button"
         app:layout_constraintTop_toTopOf="@+id/sign_up_button"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.526" />
 
     <ImageView
         android:id="@+id/gradient"
