--- a/MyCar/app/src/main/res/layout/activity_sign_in.xml
+++ b/MyCar/app/src/main/res/layout/activity_sign_in.xml
@@ -64,6 +64,7 @@
         android:layout_marginTop="196dp"
         android:layout_marginEnd="72dp"
         android:background="@null"
+        android:inputType="textPassword"
         android:hint="Password"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
