--- a/MyCar/app/src/main/res/layout/activity_add_car.xml
+++ b/MyCar/app/src/main/res/layout/activity_add_car.xml
@@ -162,33 +162,6 @@
         app:layout_constraintTop_toBottomOf="@+id/color_vector" />
 
     <ImageView
-        android:id="@+id/sign_up_button"
-        android:layout_width="243dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="88dp"
-        android:clickable="true"
-        android:contentDescription="sign_up_button"
-        android:onClick="addCar"
-        android:src="@drawable/sign_in_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/country_box3" />
-
-    <TextView
-        android:id="@+id/sign_up"
-        android:layout_width="76dp"
-        android:layout_height="29dp"
-        android:text="Add car"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/sign_up_button"
-        app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
-        app:layout_constraintHorizontal_bias="0.55"
-        app:layout_constraintStart_toStartOf="@+id/sign_up_button"
-        app:layout_constraintTop_toTopOf="@+id/sign_up_button"
-        app:layout_constraintVertical_bias="0.526" />
-
-    <ImageView
         android:id="@+id/gradient"
         android:layout_width="wrap_content"
         android:layout_height="129dp"
@@ -213,6 +186,19 @@
         app:layout_constraintStart_toStartOf="@+id/country_box6"
         app:layout_constraintTop_toTopOf="@+id/country_box6"
         app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="239dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="36dp"
+        android:backgroundTint="@color/dark_gray"
+        android:onClick="addCar"
+        android:text="Add  car"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/country_box3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
