--- a/MyCar/app/src/main/res/layout/activity_add_distance.xml
+++ b/MyCar/app/src/main/res/layout/activity_add_distance.xml
@@ -11,20 +11,18 @@
 <!--    android:gravity="center_horizontal"-->
 
 
-    <TextView
-        android:id="@+id/text_view"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/add_disrance_button"
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="239dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="116dp"
+        android:backgroundTint="@color/dark_gray"
+        android:onClick="goToCarInfo"
+        android:text="Add  car"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/to_box"
-        app:layout_constraintVertical_bias="0.468" />
+        app:layout_constraintTop_toBottomOf="@+id/to_box" />
 
     <ImageView
         android:id="@+id/to_box"
@@ -100,33 +98,6 @@
         android:src="@drawable/from_vector"
         app:layout_constraintStart_toStartOf="@+id/from_box"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/add_disrance_button"
-        android:layout_width="243dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="92dp"
-        android:clickable="true"
-        android:contentDescription="add_disrance_button"
-        android:onClick="goToCarInfo"
-        android:src="@drawable/sign_in_button"
-        app:layout_constraintBottom_toTopOf="@+id/gradient"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/add_distance"
-        android:layout_width="114dp"
-        android:layout_height="29dp"
-        android:text="Add distance"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/add_disrance_button"
-        app:layout_constraintEnd_toEndOf="@+id/add_disrance_button"
-        app:layout_constraintHorizontal_bias="0.589"
-        app:layout_constraintStart_toStartOf="@+id/add_disrance_button"
-        app:layout_constraintTop_toTopOf="@+id/add_disrance_button"
-        app:layout_constraintVertical_bias="0.578" />
 
     <ImageView
         android:id="@+id/gradient"
