--- a/MyCar/app/src/main/res/layout/activity_no_cars.xml
+++ b/MyCar/app/src/main/res/layout/activity_no_cars.xml
@@ -8,6 +8,19 @@
     tools:context=".NoCarsActivity">
 
 
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="289dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="56dp"
+        android:backgroundTint="@color/dark_gray"
+        android:onClick="addCar"
+        android:text="Add your first car!"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vector" />
+
     <TextView
         android:id="@+id/you_currently_have_no_cars_"
         android:layout_width="321dp"
@@ -33,34 +46,6 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/you_currently_have_no_cars_" />
-
-    <ImageView
-        android:id="@+id/btn"
-        android:layout_width="310dp"
-        android:layout_height="146dp"
-        android:clickable="true"
-        android:contentDescription="sign_in_button"
-        android:onClick="addCar"
-        android:src="@drawable/sign_in_button"
-        app:layout_constraintBottom_toTopOf="@+id/gradient"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vector"
-        app:layout_constraintVertical_bias="0.546" />
-
-    <TextView
-        android:id="@+id/sign_in"
-        android:layout_width="132dp"
-        android:layout_height="32dp"
-        android:text="Add your first car!"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn"
-        app:layout_constraintEnd_toEndOf="@+id/btn"
-        app:layout_constraintStart_toStartOf="@+id/btn"
-        app:layout_constraintTop_toTopOf="@+id/btn"
-        app:layout_constraintVertical_bias="0.517" />
 
     <ImageView
         android:id="@+id/gradient"
